--- a/PartyInvites/Views/Home/Thanks.cshtml
+++ b/PartyInvites/Views/Home/Thanks.cshtml
@@ -8,20 +8,44 @@
 
 <html>
 <head>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width" />
     <title>Thanks</title>
+    <style>
+        body { background-color: #F1F1F1;}
+    </style>
 </head>
 <body>
-    <div> 
-        <h1>Thank you, @Model.Name!</h1>
-        @if (Model.WillAttend == true)
+    @{ try {
+            WebMail.SmtpServer = "smtp.example.com";
+            WebMail.SmtpPort = 587;
+            WebMail.EnableSsl = true;
+            WebMail.UserName = "mySmtpUsername";
+            WebMail.Password = "mySmtpPassword";
+            WebMail.From = "rsvps@example.com";
+
+            WebMail.Send("party-host@example.com", "RSVP Notificication",
+                Model.Name + " is " + ((Model.WillAttend ?? false) ? "" : "not") + "attending");
+        } catch (Exception)
         {
-            @:It's great that you're coming, The drinks are already in the fridge!
+            @:<b>Sorry - we couldn't send the email to comfirm your RSVP. </b>
             }
-            else {
+        }
+      }
+    <div class="text-center">
+        <h1>Thank you, @Model.Name!</h1>
+        <div class="lead">
+            @if (Model.WillAttend == true)
+            {
+                @:It's great that you're coming, The drinks are already in the fridge!
+            }
+            else
+            {
                 @:Sorry to hear that you can't make it, but thanks for letting us know.
-                 }
-        
+            }
+
+        </div>
     </div>
 </body>
 </html>
